# patchify.py

./: .gitignore  Justfile  LICENSE  README.md  mypy.ini  patchify.py  pyproject.toml  setup.py  test.py
patchify/: __init__.py  view_as_windows.py
patchify/tests/: test_sanity.py
