[tool.poetry]
authors = ["Weiyuan Wu <doomsplayer@gmail.com>", "Zhifan Lan <zlan1@ualberta.ca>"]
description = "A library that helps you split image into small, overlappable patches, and merge patches back into the original image."
license = "MIT"
name = "patchify"
readme = "README.md"
version = "0.2.3"

homepage = "https://github.com/dovahcrow/patchify.py"
repository = "https://github.com/dovahcrow/patchify.py"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Graphics :: Editors",
]

keywords = ["patch", "image", "split"]

[tool.poetry.dependencies]
numpy = "^1"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyterlab = "^2.2.0"
mypy = "^0.782"
pylint = "^2.5.3"
pytest = "^5.4.3"

[tool.black]
exclude = '''
(
    /(
        \.eggs
    | \.git
    | \.pytype
    | \.pytest_cache
    | build
    | dist
    )/
)
'''
line-length = 88
target-version = ["py36", "py37", "py38"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
